styles/styles.css
html {
    cursor: none;
}

/* Customize scrollbar */
::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-thumb {
    background-color: #183a1a6f;
    border-radius: 0px;
}

::-webkit-scrollbar-track {
    background-color: #183a1a49;
    border-radius: 0px;
}

#circularcursor {
    background-color: #f9f8f68a;
    border: 1px solid #0a2008;
    height: 10px;
    width: 10px;
    border-radius: 50%;
    position: absolute;
    pointer-events: none;
    z-index: 1000;
}

body {
    background-color: #f1f1f1;
    margin: 0;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;   
}

h1 {
    font-size: 33px;
}

p {
    font-size: 21px;
    color: #595252;
}

::selection {
    background: #183a1a75;
    color: #edecec;
}

.navbar {
    margin: 18px auto; /* Center the navbar */
    display: flex;
    gap: 20px;
    justify-content: center;
}

.navbar .navitem {
    display: block;
}

.navbar a {
    color: #118406;
    text-decoration: none;
    font-size: 25px;
    position: relative;
}

.navbar a::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    background-color: rgb(0, 0, 0);
    bottom: 0;
    left: 0;
    transform-origin: left;
    transform: scaleX(0);
    transition: transform .3s ease-in-out;
}

.navbar a:hover::before {
    cursor: none;
    transform-origin: right;
    transform: scaleX(1);
}

.navbar a:hover {
    cursor: none;
    transition: 0.3s;
    color: rgb(0, 0, 0);
}

.navbar a.active {
    cursor: none;
    transition: 0.3s;
    color: rgb(55, 85, 65);
}

.info {
    margin: 1% auto; 
    padding: 0 5%;
    position: relative;
    transition: all 0.2s;
}

.info .card-inner {
    padding: 10vh;
    background: rgba(255, 255, 255, 0.05);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
    backdrop-filter: blur(8px);
    border-radius: 24px;
}

.info .circle {
    width: 190px;
    height: 190px;
    background: radial-gradient(#3e794275, #317a36);
    border-radius: 50%;
    position: absolute;
    animation: move-up6 2s ease-in infinite alternate-reverse;
}

.info .circle:nth-child(1) {
    top: -25px;
    left: -25px;
}

.info .circle:nth-child(2) {
    bottom: -35px;
    right: -55px;
    animation-name: move-down1;
}

@keyframes move-up6 {
    to {
        transform: translateY(-13px);
    }
}

@keyframes move-down1 {
    to {
        transform: translateY(10px);
    }
}

.divider {
    height: 3px;
    background-color: #172816;
    width: 125px; 
    margin-top: 20px;
    border-radius: 100px;
}

.jacHyperLink {
    cursor: none;
    color: #2e9405;
    transition: 0.5s;
    text-decoration: none;
}

.jacHyperLink:hover {
    cursor: none;
    color: #839788;
    transition: 0.5s;
}

.infoHeader {
    font-size: 25px;
    color: rgb(64, 124, 64);
}

.name {
    font-size: 40px;
    color: rgb(1, 80, 24);
}

.content-container {
    display: flex;
    align-items: flex-start;
}

.about {
    margin: 2% auto;
    width: 80%;
}

@media (max-width: 768px) {

    body {
        cursor: default !important;
        overflow-y: scroll; /* Allow user to scroll */
    }

    #circularcursor {
        display: none;
    }

    .info, .secretSection {
        width: 85%; /* Occupy full width */
        max-width: none; /* Reset max-width */
    }

    .info .circle {
        width: 80px;
        height: 80px;
    }

    .info .card-inner {
        padding: 10%;
    }

    .info .card-inner p {
        font-size: large;
    }

    .info .circle:nth-child(1) {
        top: -5px;
        left: -5px;
    }
    
    .info .circle:nth-child(2) {
        bottom: -15px;
        right: -5px;
    }
    .navbar {
        margin-left: 8%;
        justify-content: left;
    }

    .content-container {
        flex-direction: column; /* Stack items vertically */
    }
}

